// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Answer /> should render 1`] = `
.c3 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 1.25rem 0;
  color: #434956;
}

.c4 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c14 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
}

.c14 > *:first-child {
  margin-top: 0;
}

.c14 > *:last-child {
  margin-bottom: 0;
}

.c17 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c17:not([disabled]):hover,
.c17:not([disabled]):active,
.c17:not([disabled]):focus {
  color: #18181c;
  background: #fbfcfd;
}

.c17[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c20 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c20:not([disabled]):hover,
.c20:not([disabled]):active,
.c20:not([disabled]):focus {
  color: #fff;
  background: #07f;
}

.c20[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c27 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c27:hover {
  color: #8c94a6;
}

.c22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #434956;
  background-color: #fff;
  border-color: #fee5ad;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  box-shadow: 0 5px 10px 0 #ebeff3;
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c24 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  position: relative;
  margin-bottom: 1.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  color: #4c5467;
  font-weight: 600;
}

.c8 {
  display: inline-block;
  margin-left: 1rem;
  color: #4c5467;
  font-size: 0.875rem;
}

.c9 {
  color: #4c5467;
  font-weight: 600;
}

.c10 {
  margin-left: -10px;
}

.c21 {
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1rem;
}

.c25 {
  padding: 0 0.25rem;
}

.c15 {
  margin-bottom: 1rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c19 {
  min-width: 7rem;
}

.c19 + .c18 {
  margin-left: 1rem;
}

.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c12 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
  margin: 1rem auto;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c13 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c11 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c4 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c14 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c14 {
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c8 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c2"
            >
              <div
                class="c5"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c6"
                >
                  <span
                    class="c7"
                  >
                    social groove
                  </span>
                  <span
                    class="c8"
                  >
                    Mis à jour le : 
                    <span
                      class="c9"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c10"
                />
              </div>
              <div
                class="c11"
              >
                <div
                  class="c12"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      html
                    </strong>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c13"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c14"
          >
            <h3
              class="c15"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c16"
            >
              <button
                class="c17 c18 c19"
              >
                Non
              </button>
              <button
                class="c20 c18 c19"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c21"
  >
    <div
      class="c22"
    >
      <div
        class="c23"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c24"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c25"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c26"
      >
        <button
          aria-label="Fermer"
          class="c27"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render a breadcrumbs 1`] = `
.c10 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c10 > *:first-child {
  margin-top: 0;
}

.c10 > *:last-child {
  margin-bottom: 0;
}

.c18 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
}

.c18 > *:first-child {
  margin-top: 0;
}

.c18 > *:last-child {
  margin-bottom: 0;
}

.c9 {
  padding: 1.25rem 0;
  color: #434956;
}

.c11 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #fff;
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c21 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
}

.c21 > *:first-child {
  margin-top: 0;
}

.c21 > *:last-child {
  margin-bottom: 0;
}

.c24 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c24:not([disabled]):hover,
.c24:not([disabled]):active,
.c24:not([disabled]):focus {
  color: #18181c;
  background: #fbfcfd;
}

.c24[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c27 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c27:not([disabled]):hover,
.c27:not([disabled]):active,
.c27:not([disabled]):focus {
  color: #fff;
  background: #07f;
}

.c27[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c34 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c34:hover {
  color: #8c94a6;
}

.c1 {
  position: relative;
  overflow: hidden;
}

.c1:before,
.c1:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, white 15%, rgba(255,255,255,0) 80% );
}

.c1:before {
  left: -2rem;
}

.c1:after {
  right: -2rem;
}

.c2 {
  overflow-x: auto;
}

.c29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #434956;
  background-color: #fff;
  border-color: #fee5ad;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  box-shadow: 0 5px 10px 0 #ebeff3;
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c31 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  position: relative;
  margin-bottom: 1.25rem;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c14 {
  color: #4c5467;
  font-weight: 600;
}

.c15 {
  display: inline-block;
  margin-left: 1rem;
  color: #4c5467;
  font-size: 0.875rem;
}

.c16 {
  color: #4c5467;
  font-weight: 600;
}

.c17 {
  margin-left: -10px;
}

.c28 {
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1rem;
}

.c32 {
  padding: 0 0.25rem;
}

.c22 {
  margin-bottom: 1rem;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c26 {
  min-width: 7rem;
}

.c26 + .c25 {
  margin-left: 1rem;
}

.c0 {
  overflow-x: auto;
  background: #e5f1fe;
}

.c3 {
  margin: 0;
  padding: 0;
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.625rem 0;
}

.c4 {
  display: inline-block;
  padding: 0.625rem 1.25rem;
  white-space: nowrap;
}

.c5 {
  display: block;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c6 {
  display: block;
  width: 1rem;
  color: #005994;
}

.c7 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c7 > *:first-child {
  margin-top: 0;
}

.c7 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  width: 80%;
}

.c19 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
  margin: 1rem auto;
}

.c19 > *:first-child {
  margin-top: 0;
}

.c19 > *:last-child {
  margin-bottom: 0;
}

.c20 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c10 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c18 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c11 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c11 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c21 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c21 {
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c12 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c13 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c15 {
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 0.5rem 0;
  }
}

@media print {
  .c7 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c8 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c19 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c19 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <ul
          class="c3"
        >
          <li
            class="c4"
          >
            <a
              href="/"
              title="Retour à l'accueil"
            >
              Accueil
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c5"
          >
            <svg
              class="c6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="13 17 18 12 13 7"
              />
              <polyline
                points="6 17 11 12 6 7"
              />
            </svg>
          </li>
          <li
            class="c4"
          >
            <a
              href="/themes/tag-1"
              title="Voir le theme tag1"
            >
              tag1
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c5"
          >
            <svg
              class="c6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="13 17 18 12 13 7"
              />
              <polyline
                points="6 17 11 12 6 7"
              />
            </svg>
          </li>
          <li
            class="c4"
          >
            <a
              href="/themes/tag-2"
              title="Voir le theme tag2"
            >
              tag2
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <div
    class="c7"
  >
    <div
      class="c8"
    >
      <div
        class="c9"
        data-main-content="true"
      >
        <div
          class="c10"
        >
          <div
            class="c11"
          >
            <div
              class="c9"
            >
              <div
                class="c12"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c13"
                >
                  <span
                    class="c14"
                  >
                    social groove
                  </span>
                  <span
                    class="c15"
                  >
                    Mis à jour le : 
                    <span
                      class="c16"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c17"
                />
              </div>
              <div
                class="c18"
              >
                <div
                  class="c19"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      html
                    </strong>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c20"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          <div
            class="c21"
          >
            <h3
              class="c22"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c23"
            >
              <button
                class="c24 c25 c26"
              >
                Non
              </button>
              <button
                class="c27 c25 c26"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c28"
  >
    <div
      class="c29"
    >
      <div
        class="c30"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c31"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c32"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c33"
      >
        <button
          aria-label="Fermer"
          class="c34"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render tooltip 1`] = `
.c3 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 1.25rem 0;
  color: #434956;
}

.c4 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
}

.c15 > *:first-child {
  margin-top: 0;
}

.c15 > *:last-child {
  margin-bottom: 0;
}

.c18 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c18:not([disabled]):hover,
.c18:not([disabled]):active,
.c18:not([disabled]):focus {
  color: #18181c;
  background: #fbfcfd;
}

.c18[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c21 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c21:not([disabled]):hover,
.c21:not([disabled]):active,
.c21:not([disabled]):focus {
  color: #fff;
  background: #07f;
}

.c21[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c28 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c28:hover {
  color: #8c94a6;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #434956;
  background-color: #fff;
  border-color: #fee5ad;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  box-shadow: 0 5px 10px 0 #ebeff3;
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c25 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  position: relative;
  margin-bottom: 1.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  color: #4c5467;
  font-weight: 600;
}

.c8 {
  display: inline-block;
  margin-left: 1rem;
  color: #4c5467;
  font-size: 0.875rem;
}

.c9 {
  color: #4c5467;
  font-weight: 600;
}

.c10 {
  margin-left: -10px;
}

.c22 {
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1rem;
}

.c26 {
  padding: 0 0.25rem;
}

.c16 {
  margin-bottom: 1rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c20 {
  min-width: 7rem;
}

.c20 + .c19 {
  margin-left: 1rem;
}

.c13 {
  border-bottom: 1px dotted #006be6;
}

.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c12 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
  margin: 1rem auto;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c14 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c11 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c4 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c15 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c15 {
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c8 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c2"
            >
              <div
                class="c5"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c6"
                >
                  <span
                    class="c7"
                  >
                    social groove
                  </span>
                  <span
                    class="c8"
                  >
                    Mis à jour le : 
                    <span
                      class="c9"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c10"
                />
              </div>
              <div
                class="c11"
              >
                <div
                  class="c12"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      html
                    </strong>
                     contenant des tooltip sur certains mot comme 
                    <span
                      data-tooltip-ref="__tt__2"
                    >
                      <span
                        class="c13"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        rescrit
                      </span>
                    </span>
                    . match aussi les abbréviation comme 
                    <span
                      data-tooltip-ref="__tt__1"
                    >
                      <span
                        class="c13"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        APE
                      </span>
                    </span>
                     mais pas ape ou ses variantes comme 
                    <span
                      data-tooltip-ref="__tt__0"
                    >
                      <span
                        class="c13"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        code ape
                      </span>
                    </span>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c14"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c15"
          >
            <h3
              class="c16"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c17"
            >
              <button
                class="c18 c19 c20"
              >
                Non
              </button>
              <button
                class="c21 c19 c20"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c22"
  >
    <div
      class="c23"
    >
      <div
        class="c24"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c25"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c26"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c27"
      >
        <button
          aria-label="Fermer"
          class="c28"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render tooltip for words with diacritics without breaking html 1`] = `
.c3 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 1.25rem 0;
  color: #434956;
}

.c4 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
}

.c15 > *:first-child {
  margin-top: 0;
}

.c15 > *:last-child {
  margin-bottom: 0;
}

.c18 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c18:not([disabled]):hover,
.c18:not([disabled]):active,
.c18:not([disabled]):focus {
  color: #18181c;
  background: #fbfcfd;
}

.c18[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c21 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c21:not([disabled]):hover,
.c21:not([disabled]):active,
.c21:not([disabled]):focus {
  color: #fff;
  background: #07f;
}

.c21[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c28 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c28:hover {
  color: #8c94a6;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #434956;
  background-color: #fff;
  border-color: #fee5ad;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  box-shadow: 0 5px 10px 0 #ebeff3;
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c25 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  position: relative;
  margin-bottom: 1.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  color: #4c5467;
  font-weight: 600;
}

.c8 {
  display: inline-block;
  margin-left: 1rem;
  color: #4c5467;
  font-size: 0.875rem;
}

.c9 {
  color: #4c5467;
  font-weight: 600;
}

.c10 {
  margin-left: -10px;
}

.c22 {
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1rem;
}

.c26 {
  padding: 0 0.25rem;
}

.c16 {
  margin-bottom: 1rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c20 {
  min-width: 7rem;
}

.c20 + .c19 {
  margin-left: 1rem;
}

.c13 {
  border-bottom: 1px dotted #006be6;
}

.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c12 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
  margin: 1rem auto;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c14 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c11 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c4 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c15 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c15 {
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c8 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c2"
            >
              <div
                class="c5"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c6"
                >
                  <span
                    class="c7"
                  >
                    social groove
                  </span>
                  <span
                    class="c8"
                  >
                    Mis à jour le : 
                    <span
                      class="c9"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c10"
                />
              </div>
              <div
                class="c11"
              >
                <div
                  class="c12"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      <span
                        data-tooltip-ref="__tt__1"
                      >
                        <span
                          class="c13"
                          data-reach-tooltip-trigger=""
                          tabindex="0"
                        >
                          indemnités
                        </span>
                      </span>
                    </strong>
                    comme 
                    <span
                      data-tooltip-ref="__tt__0"
                    >
                      <span
                        class="c13"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        code ape
                      </span>
                    </span>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c14"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c15"
          >
            <h3
              class="c16"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c17"
            >
              <button
                class="c18 c19 c20"
              >
                Non
              </button>
              <button
                class="c21 c19 c20"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c22"
  >
    <div
      class="c23"
    >
      <div
        class="c24"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c25"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c26"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c27"
      >
        <button
          aria-label="Fermer"
          class="c28"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render tooltip without breaking previous word 1`] = `
.c3 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 1.25rem 0;
  color: #434956;
}

.c4 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
}

.c15 > *:first-child {
  margin-top: 0;
}

.c15 > *:last-child {
  margin-bottom: 0;
}

.c18 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c18:not([disabled]):hover,
.c18:not([disabled]):active,
.c18:not([disabled]):focus {
  color: #18181c;
  background: #fbfcfd;
}

.c18[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c21 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c21:not([disabled]):hover,
.c21:not([disabled]):active,
.c21:not([disabled]):focus {
  color: #fff;
  background: #07f;
}

.c21[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c28 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c28:hover {
  color: #8c94a6;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  color: #434956;
  background-color: #fff;
  border-color: #fee5ad;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  box-shadow: 0 5px 10px 0 #ebeff3;
  -webkit-animation: iowhYu 300ms ease-out;
  animation: iowhYu 300ms ease-out;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c25 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
  padding: 0;
  position: relative;
  margin-bottom: 1.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  color: #4c5467;
  font-weight: 600;
}

.c8 {
  display: inline-block;
  margin-left: 1rem;
  color: #4c5467;
  font-size: 0.875rem;
}

.c9 {
  color: #4c5467;
  font-weight: 600;
}

.c10 {
  margin-left: -10px;
}

.c22 {
  position: fixed;
  bottom: 0;
  z-index: 1000;
  width: 100%;
  padding: 1rem;
}

.c26 {
  padding: 0 0.25rem;
}

.c16 {
  margin-bottom: 1rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c20 {
  min-width: 7rem;
}

.c20 + .c19 {
  margin-left: 1rem;
}

.c13 {
  border-bottom: 1px dotted #006be6;
}

.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c12 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #ebeff3;
  margin: 1rem auto;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c14 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c11 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c4 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c15 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c15 {
    padding: 0 5pt;
    border: none;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c8 {
    margin-left: 0;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-main-content="true"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c2"
            >
              <div
                class="c5"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c6"
                >
                  <span
                    class="c7"
                  >
                    social groove
                  </span>
                  <span
                    class="c8"
                  >
                    Mis à jour le : 
                    <span
                      class="c9"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c10"
                />
              </div>
              <div
                class="c11"
              >
                <div
                  class="c12"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    annualisation du temps de travail. 
                    <span
                      data-tooltip-ref="__tt__0"
                    >
                      <span
                        class="c13"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        Annualisation
                      </span>
                    </span>
                     de l'
                    <span
                      data-tooltip-ref="__tt__1"
                    >
                      <span
                        class="c13"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        annualisation
                      </span>
                    </span>
                    .
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c14"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c15"
          >
            <h3
              class="c16"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c17"
            >
              <button
                class="c18 c19 c20"
              >
                Non
              </button>
              <button
                class="c21 c19 c20"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c22"
  >
    <div
      class="c23"
    >
      <div
        class="c24"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c25"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c26"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c27"
      >
        <button
          aria-label="Fermer"
          class="c28"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
